# Copyright 2026 The JAX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# INTEL ONEAPI plugin extension

load("@local_config_sycl//sycl:build_defs.bzl", "sycl_library")
load("@rules_python//python:defs.bzl", "py_library")
load(
    "//jaxlib:jax.bzl",
    "nanobind_extension",
)

licenses(["notice"])

package(
    default_applicable_licenses = [],
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "oneapi_gpu_runtime_hdrs",
    hdrs = ["oneapi_gpu_runtime.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@local_config_sycl//sycl:sycl_headers",
    ],
)

cc_library(
    name = "oneapi_gpu_runtime",
    srcs = ["oneapi_gpu_runtime.cc"],
    hdrs = ["oneapi_gpu_runtime.h"],
    copts = ["-fsycl"],
    features = ["-use_header_modules"],
    linkopts = ["-fsycl"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@local_config_sycl//sycl:sycl_headers",
    ],
)

cc_library(
    name = "oneapi_vendor",
    defines = ["JAX_GPU_ONEAPI=1"],
    textual_hdrs = [
        "//jaxlib/gpu:vendor.h",
    ],
    deps = [
        ":oneapi_gpu_runtime_hdrs",
    ],
)

cc_library(
    name = "oneapi_gpu_kernel_helpers",
    hdrs = ["//jaxlib/gpu:gpu_kernel_helpers.h"],
    features = ["-use_header_modules"],
    deps = [
        ":oneapi_vendor",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
    ],
)

sycl_library(
    name = "oneapi_prng_kernels_impl",
    srcs = ["//jaxlib/gpu:prng_kernels_oneapi.cc"],
    hdrs = ["//jaxlib/gpu:prng_kernels.h"],
    features = ["-use_header_modules"],
    deps = [
        ":oneapi_gpu_kernel_helpers",
        ":oneapi_vendor",
        "@xla//xla/ffi/api:ffi",
    ],
)

sycl_library(
    name = "oneapi_prng_kernels",
    srcs = ["//jaxlib/gpu:prng_kernels.cc"],
    hdrs = ["//jaxlib/gpu:prng_kernels.h"],
    features = ["-use_header_modules"],
    deps = [
        ":oneapi_gpu_kernel_helpers",
        ":oneapi_prng_kernels_impl",
        ":oneapi_vendor",
        ":oneapi_gpu_runtime",
        "//jaxlib:ffi_helpers",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@xla//xla/ffi/api:c_api",
        "@xla//xla/ffi/api:ffi",
    ],
)

nanobind_extension(
    name = "_prng",
    srcs = ["//jaxlib/gpu:prng.cc"],
    copts = [
        "-fexceptions",
        "-fno-strict-aliasing",
    ],
    linkopts = ["-link_stage"],
    features = ["-use_header_modules"],
    module_name = "_prng",
    deps = [
        ":oneapi_gpu_kernel_helpers",
        ":oneapi_prng_kernels",
        ":oneapi_vendor",
        "//jaxlib:kernel_nanobind_helpers",
        "@nanobind",
    ],
)

py_library(
    name = "oneapi_gpu_support",
    deps = [
        ":_prng",
    ],
)

nanobind_extension(
    name = "oneapi_plugin_extension",
    srcs = ["oneapi_plugin_extension.cc"],
    module_name = "oneapi_plugin_extension",
    deps = [
        "//jaxlib:kernel_nanobind_helpers",
        "//jaxlib/gpu:gpu_plugin_extension",
        "@com_google_absl//absl/status",
        "@nanobind",
    ],
)
